data/derived/comb/progs/unify/prog6923.ml.out
Characters 18-20:
  let _ = fixpoint (fs, 100);;
                    ^^
Error: This expression has type int -> int
       but an expression was expected of type int -> int * bool
       Type int is not compatible with type int * bool 
